[tool.poetry]
name = "keymaer"
version = "0.2.0"
description = "Key mapper"
authors = ["tretrauit <tretrauit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.*"
keyboard = {git = "https://github.com/boppreh/keyboard"}
pyjion = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
