[tool.poetry]
name = "keymaer"
version = "0.2.0-1"
description = "Key mapper"
authors = ["tretrauit <tretrauit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
keyboard = {git = "https://github.com/boppreh/keyboard"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
